--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "common-core",
-  "version": "0.1.0",
+  "version": "0.1.0-beta",
   "description": "",
   "main": "dist/.src/index.js",
   "types": "dist/.src/index.d.ts",
