Update package.json & Date test
Forgot to commit a change to ignore typescript compiler complaints for type guard testing...

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "common-core",
+  "name": "@allusivebox/common-core",
   "version": "0.1.0-beta",
   "description": "",
   "main": "dist/.src/index.js",
