--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "ts-jest": "^28.0.5",
     "typedoc": "^0.23.4",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "tiny-typed-emitter": "^2.1.0"
   }
 }
