--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@allusivebox/common-core",
+  "name": "@allusivebox/core",
   "version": "0.1.0-beta",
   "description": "",
   "main": "dist/.src/index.js",
@@ -33,8 +33,5 @@
     "ts-jest": "^28.0.5",
     "typedoc": "^0.23.4",
     "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "tiny-typed-emitter": "^2.1.0"
   }
 }
