--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@allusivebox/core",
   "version": "0.1.0-beta",
-  "description": "",
+  "description": "A simple package containing small, possibly overkill, code for projects I work on.",
   "main": "dist/.src/index.js",
   "types": "dist/.src/index.d.ts",
   "scripts": {
