--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "common-core",
+  "name": "@allusivebox/core",
   "version": "0.1.0",
-  "description": "",
+  "description": "A simple package containing small, possibly overkill, code for projects I work on.",
   "main": "dist/.src/index.js",
   "types": "dist/.src/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "build:docs": "npm run build && npm run build:nocomments && typedoc",
+    "build:docs": "typedoc",
     "build:nocomments": "tsc -p ./tsconfig.nocomments.json",
-    "build:npmrelease": "npm run build && npm run build:nocomments",
-    "prepublish": "jest && npm run build:npmrelease",
+    "build:npmrelease": "npm run build && npm run build:nocomments && npm run build:docs",
+    "prepublishOnly": "jest && npm run build:npmrelease",
     "test": "jest",
     "integration": "jest --group=Integration",
     "unit": "jest --group=Unit"
@@ -31,7 +31,7 @@
     "jest-extended": "^2.0.0",
     "jest-runner-groups": "^2.2.0",
     "ts-jest": "^28.0.5",
-    "typedoc": "^0.23.4",
+    "typedoc": "^0.22.18",
     "typescript": "^4.7.4"
   }
 }
