--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@allusivebox/core",
-  "version": "0.1.0",
+  "version": "0.2.0-beta.1",
   "description": "A simple package containing small, possibly overkill, code for projects I work on.",
   "main": "dist/.src/index.js",
   "types": "dist/.src/index.d.ts",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "tsc",
     "build:docs": "typedoc",
     "build:nocomments": "tsc -p ./tsconfig.nocomments.json",
@@ -30,6 +31,7 @@
     "jest": "^28.1.2",
     "jest-extended": "^2.0.0",
     "jest-runner-groups": "^2.2.0",
+    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
     "typedoc": "^0.22.18",
     "typescript": "^4.7.4"
