--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ts-jest": "^29.0.3",
     "typedoc": "^0.22.18",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "boolean": "^3.2.0"
   }
 }
