--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@allusivebox/core",
-  "version": "0.2.0-beta.1",
+  "version": "0.2.0",
   "description": "A simple package containing small, possibly overkill, code for projects I work on.",
   "main": "dist/.src/index.js",
   "types": "dist/.src/index.d.ts",
@@ -31,6 +31,7 @@
     "jest": "^29.2.2",
     "jest-extended": "^2.0.0",
     "jest-runner-groups": "^2.2.0",
+    "npm-packlist": "^7.0.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "typedoc": "^0.22.18",
