--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "boolean": "^3.2.0"
+    "boolean": "^3.2.0",
+    "winston": "^3.13.0"
   }
 }
